--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "app-pelis",
+  "name": "test-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.8.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.3",
+    "axios": "^1.1.2",
+    "bootstrap": "^5.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "prebuild": "echo El build va a comenzar",
     "start": "react-scripts start",
+    "postbuild": "echo '/* /index.html  200' | cat >build/_redirects",
     "build": "react-scripts build",
+    "otro": "echo OTRO",
+    "preotro": "echo PREOTRO",
+    "postotro": "echo POSTOTRO",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
